--- a/registrof.html
+++ b/registrof.html
@@ -165,7 +165,7 @@ tr:nth-child(even) {
 <thead>
 <tr>
     <th>Nome</th>
-    <th>JOAO BRITTO</th>
+    <th>PARCERIA</th>
     <th></th>
 </tr>
 </thead>
@@ -293,4 +293,5 @@ carregar();
 
 </body>
 </html>
+
 
