--- a/registrof.html
+++ b/registrof.html
@@ -157,7 +157,7 @@ tr:nth-child(even) {
         <option value="">Todas</option>
         <option value="PM">PM</option>
         <option value="PRF">PRF</option>
-        <option value="Parceria">Parceria</option>
+        <option value="DEBOXE CUSTOMS">DEBOXE CUSTOMS</option>
     </select>
 </div>
 
@@ -293,5 +293,6 @@ carregar();
 
 </body>
 </html>
+
 
 
