--- a/registrof.html
+++ b/registrof.html
@@ -8,188 +8,276 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background: linear-gradient(135deg, #020617, #0f172a);
-    color: #fff;
-    display: flex;
-    justify-content: center;
+:root{
+    --bg:#020617;
+    --bg2:#0f172a;
+    --card:#020617;
+    --border:#1e293b;
+    --text:#e5e7eb;
+    --muted:#94a3b8;
+    --primary:#2563eb;
 }
 
-.container {
-    width: 100%;
-    max-width: 850px;
-    margin: 25px;
-    background: rgba(2,6,23,.95);
-    border-radius: 14px;
-    padding: 25px;
-    box-shadow: 0 0 40px rgba(0,0,0,.6);
+*{box-sizing:border-box}
+
+body{
+    margin:0;
+    font-family:'Inter',sans-serif;
+    background:linear-gradient(135deg,var(--bg),var(--bg2));
+    color:var(--text);
+    display:flex;
+    justify-content:center;
 }
 
-.header {
-    text-align: center;
-    margin-bottom: 20px;
+.container{
+    width:100%;
+    max-width:980px;
+    margin:30px;
+    background:rgba(2,6,23,.97);
+    border-radius:18px;
+    padding:30px;
+    box-shadow:0 20px 60px rgba(0,0,0,.7);
 }
 
-.header h1 {
-    margin: 0;
-    font-size: 26px;
+/* HEADER */
+.header{
+    text-align:center;
+    margin-bottom:30px;
 }
 
-.header p {
-    opacity: .8;
-    margin-top: 5px;
+.header h1{
+    margin:0;
+    font-size:30px;
+    font-weight:700;
 }
 
-.controls {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 15px;
+.header p{
+    margin-top:8px;
+    color:var(--muted);
+    font-size:15px;
+}
+
+/* CONTROLS */
+.controls{
+    display:flex;
+    gap:12px;
+    margin-bottom:20px;
 }
 
 .controls input,
-.controls select {
-    flex: 1;
-    padding: 10px;
-    background: #020617;
-    border: 1px solid #334155;
-    border-radius: 8px;
-    color: #fff;
+.controls select{
+    flex:1;
+    padding:12px;
+    background:var(--bg);
+    border:1px solid var(--border);
+    border-radius:10px;
+    color:var(--text);
+    font-size:14px;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    overflow: hidden;
-    border-radius: 10px;
+/* TABLE */
+.table-card{
+    background:var(--card);
+    border:1px solid var(--border);
+    border-radius:14px;
+    overflow:hidden;
 }
 
-th, td {
-    padding: 12px;
-    text-align: center;
+table{
+    width:100%;
+    border-collapse:collapse;
 }
 
-th {
-    background: #020617;
-    border-bottom: 1px solid #334155;
+th,td{
+    padding:14px;
+    text-align:center;
+    font-size:14px;
 }
 
-tr:nth-child(even) {
-    background: rgba(255,255,255,.03);
+th{
+    background:#020617;
+    color:#cbd5f5;
+    border-bottom:1px solid var(--border);
 }
 
-.badge {
-    padding: 4px 10px;
-    border-radius: 20px;
-    font-size: 13px;
-    font-weight: 600;
+tr:nth-child(even){
+    background:rgba(255,255,255,.03);
 }
 
-.PM { background: #1e40af; }
-.PRF { background: #065f46; }
-.Parceria { background: #7c2d12; }
-
-.admin-toggle {
-    margin-top: 20px;
-    text-align: center;
+/* BADGES */
+.badge{
+    padding:6px 14px;
+    border-radius:999px;
+    font-size:12px;
+    font-weight:600;
 }
 
-.admin-toggle button {
-    background: transparent;
-    border: 1px dashed #334155;
-    color: #94a3b8;
-    padding: 8px 14px;
-    border-radius: 8px;
-    cursor: pointer;
+.PM{background:#1e40af}
+.PRF{background:#065f46}
+.DEBOXE_CUSTOMS{background:#7c2d12}
+
+/* ADMIN */
+.admin-toggle{
+    margin-top:25px;
+    text-align:center;
 }
 
-.admin {
-    display: none;
-    margin-top: 20px;
-    border-top: 1px solid #334155;
-    padding-top: 20px;
+.admin-toggle button{
+    background:transparent;
+    border:1px dashed var(--border);
+    color:var(--muted);
+    padding:10px 16px;
+    border-radius:10px;
+    cursor:pointer;
 }
 
-.admin input, .admin select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    background: #020617;
-    border: 1px solid #334155;
-    border-radius: 8px;
-    color: #fff;
+.admin{
+    display:none;
+    margin-top:30px;
+    padding-top:25px;
+    border-top:1px solid var(--border);
 }
 
-.admin button {
-    margin-top: 10px;
-    width: 100%;
-    background: #2563eb;
-    color: #fff;
-    padding: 10px;
-    border-radius: 8px;
-    border: none;
-    font-weight: bold;
-    cursor: pointer;
+.admin h3{
+    margin-top:0;
+    font-size:18px;
 }
 
-.del {
-    background: #dc2626;
-    border: none;
-    padding: 6px 10px;
-    border-radius: 6px;
-    cursor: pointer;
-    color: #fff;
+.admin input,
+.admin select{
+    width:100%;
+    padding:12px;
+    margin-top:12px;
+    background:var(--bg);
+    border:1px solid var(--border);
+    border-radius:10px;
+    color:var(--text);
+}
+
+.admin button{
+    margin-top:14px;
+    width:100%;
+    background:var(--primary);
+    color:#fff;
+    padding:12px;
+    border:none;
+    border-radius:10px;
+    font-weight:600;
+    cursor:pointer;
+}
+
+.del{
+    background:#dc2626;
+    border:none;
+    padding:6px 10px;
+    border-radius:8px;
+    cursor:pointer;
+    color:#fff;
+}
+
+/* BENEFITS */
+.beneficios{
+    margin-top:35px;
+    padding:25px;
+    background:linear-gradient(135deg,#020617,#020617);
+    border:1px solid var(--border);
+    border-radius:16px;
+}
+
+.beneficios h3{
+    margin-top:0;
+    margin-bottom:12px;
+    font-size:20px;
+    color:#38bdf8;
+}
+
+.beneficios ul{
+    list-style:none;
+    padding:0;
+    margin:0;
+}
+
+.beneficios li{
+    margin-bottom:10px;
+    font-size:15px;
+}
+
+.beneficios .obs{
+    margin-top:14px;
+    font-size:14px;
+    color:var(--muted);
+    line-height:1.5;
 }
 </style>
 </head>
 <body>
 
 <div class="container">
+
 <div class="header">
     <h1>📋 Mural Oficial de Parcerias</h1>
-    <p>Lista pública de integrantes e parcerias ativas</p>
+    <p>Registro público de parceiros ativos e benefícios oficiais</p>
 </div>
 
 <div class="controls">
-    <input id="busca" placeholder="🔍 Buscar nome" oninput="render()">
+    <input id="busca" placeholder="🔍 Buscar parceiro" oninput="render()">
     <select id="filtro" onchange="render()">
-        <option value="">Todas</option>
+        <option value="">Todas as parcerias</option>
         <option value="PM">PM</option>
         <option value="PRF">PRF</option>
         <option value="DEBOXE CUSTOMS">DEBOXE CUSTOMS</option>
     </select>
 </div>
 
+<div class="table-card">
 <table>
 <thead>
 <tr>
     <th>Nome</th>
-    <th>PARCERIA</th>
+    <th>Parceria</th>
     <th></th>
 </tr>
 </thead>
 <tbody id="lista"></tbody>
 </table>
+</div>
 
 <div class="admin-toggle">
-    <button onclick="toggleAdmin()">Acesso Admin</button>
+    <button onclick="toggleAdmin()">Acesso Administrativo</button>
 </div>
 
 <div class="admin" id="admin">
     <h3>Área Administrativa</h3>
 
-    <input type="password" id="senha" placeholder="Senha admin">
-    <input id="nome" placeholder="Nome">
-    <select id="parceria">
-        <option value="">Selecione</option>
+    <input type="password" id="senhaAdmin" placeholder="Senha admin">
+    <input type="password" id="senhaDeboxe" placeholder="Senha DEBOXE CUSTOMS" style="display:none">
+
+    <input id="nome" placeholder="Nome do parceiro">
+
+    <select id="parceria" onchange="verificarParceria()">
+        <option value="">Selecione a parceria</option>
         <option value="PM">PM</option>
         <option value="PRF">PRF</option>
-        <option value="Parceria">Parceria</option>
+        <option value="DEBOXE CUSTOMS">DEBOXE CUSTOMS</option>
     </select>
 
-    <button onclick="adicionar()">Adicionar</button>
+    <button onclick="adicionar()">Adicionar parceiro</button>
 </div>
+
+<div class="beneficios">
+    <h3>🎁 Benefícios para Parceiros</h3>
+    <ul>
+        <li>🔧 <strong>Reparo totalmente grátis</strong></li>
+        <li>💸 <strong>10% de desconto na tunagem</strong></li>
+    </ul>
+
+    <p class="obs">
+        ℹ️ Para receber os benefícios, o ideal é <strong>fazer parte do grupo parceiro e estar na lista oficial</strong>.<br>
+        ⚠️ <strong>Exceção:</strong> Caso o parceiro não esteja na lista, mas esteja <strong>fardado com a roupa oficial</strong>,
+        os benefícios poderão ser concedidos.
+    </p>
+</div>
+
 </div>
 
 <script type="module">
@@ -215,84 +303,75 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-const SENHA = "admin123";
-let dados = [];
-let adminLiberado = false;
+const SENHA_ADMIN="admin123";
+const SENHA_DEBOXE="deboxe123";
 
-async function carregar() {
-    dados = [];
-    const snap = await getDocs(collection(db, "parcerias"));
-    snap.forEach(d => dados.push({ id: d.id, ...d.data() }));
+let dados=[];
+let admin=false;
+
+async function carregar(){
+    dados=[];
+    const snap=await getDocs(collection(db,"parcerias"));
+    snap.forEach(d=>dados.push({id:d.id,...d.data()}));
     render();
 }
 
-window.render = function () {
-    const lista = document.getElementById("lista");
-    lista.innerHTML = "";
-
-    const busca = buscaInput.value.toLowerCase();
-    const filtro = filtroInput.value;
-
-    dados.filter(d =>
-        d.nome.toLowerCase().includes(busca) &&
-        (filtro === "" || d.parceria === filtro)
-    ).forEach(d => {
-        lista.innerHTML += `
+window.render=function(){
+    lista.innerHTML="";
+    dados
+    .filter(d=>d.nome.toLowerCase().includes(busca.value.toLowerCase())
+        && (filtro.value===""||d.parceria===filtro.value))
+    .forEach(d=>{
+        lista.innerHTML+=`
         <tr>
             <td>${d.nome}</td>
-            <td><span class="badge ${d.parceria}">${d.parceria}</span></td>
-            <td>${adminLiberado ? `<button class="del" onclick="remover('${d.id}')">🗑️</button>` : ""}</td>
+            <td><span class="badge ${d.parceria.replace(/\s/g,"_")}">${d.parceria}</span></td>
+            <td>${admin?`<button class="del" onclick="remover('${d.id}')">🗑️</button>`:""}</td>
         </tr>`;
     });
-};
+}
 
-window.toggleAdmin = function () {
-    const senha = prompt("Senha admin:");
-    if (senha !== SENHA) return alert("Senha incorreta");
-
-    adminLiberado = true;
-    document.getElementById("admin").style.display = "block";
+window.toggleAdmin=function(){
+    if(prompt("Senha admin:")!==SENHA_ADMIN)return alert("Senha incorreta");
+    admin=true;
+    document.getElementById("admin").style.display="block";
     render();
-};
+}
 
-window.adicionar = async function () {
-    const nome = nomeInput.value.trim();
-    const parceria = parceriaSelect.value;
-    const senha = senhaInput.value;
+window.verificarParceria=function(){
+    senhaDeboxe.style.display=parceria.value==="DEBOXE CUSTOMS"?"block":"none";
+}
 
-    if (senha !== SENHA) return alert("Senha incorreta");
-    if (!nome || !parceria) return alert("Preencha tudo");
+window.adicionar=async function(){
+    if(senhaAdmin.value!==SENHA_ADMIN)return alert("Senha admin incorreta");
+    if(parceria.value==="DEBOXE CUSTOMS"&&senhaDeboxe.value!==SENHA_DEBOXE)
+        return alert("Senha DEBOXE CUSTOMS incorreta");
 
-    if (dados.some(d => d.nome.toLowerCase() === nome.toLowerCase())) {
+    if(!nome.value||!parceria.value)return alert("Preencha tudo");
+    if(dados.some(d=>d.nome.toLowerCase()===nome.value.toLowerCase()))
         return alert("Nome já existe");
-    }
 
-    await addDoc(collection(db, "parcerias"), { nome, parceria });
-
-    nomeInput.value = "";
-    parceriaSelect.value = "";
-    senhaInput.value = "";
-
+    await addDoc(collection(db,"parcerias"),{nome:nome.value.trim(),parceria:parceria.value});
+    nome.value="";parceria.value="";senhaDeboxe.value="";
     carregar();
-};
+}
 
-window.remover = async function (id) {
-    if (!confirm("Remover este nome?")) return;
-    await deleteDoc(doc(db, "parcerias", id));
+window.remover=async function(id){
+    if(!confirm("Remover parceiro?"))return;
+    await deleteDoc(doc(db,"parcerias",id));
     carregar();
-};
+}
 
-const buscaInput = document.getElementById("busca");
-const filtroInput = document.getElementById("filtro");
-const nomeInput = document.getElementById("nome");
-const parceriaSelect = document.getElementById("parceria");
-const senhaInput = document.getElementById("senha");
+const busca=document.getElementById("busca");
+const filtro=document.getElementById("filtro");
+const lista=document.getElementById("lista");
+const nome=document.getElementById("nome");
+const parceria=document.getElementById("parceria");
+const senhaAdmin=document.getElementById("senhaAdmin");
+const senhaDeboxe=document.getElementById("senhaDeboxe");
 
 carregar();
 </script>
 
 </body>
 </html>
-
-
-
